--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,50 @@
-name: Build and deploy Hugo site to GitHub Pages
+# .github/workflows/deploy.yml
+name: Deploy Hugo site to GitHub Pages
 
 on:
   push:
-    branches: [ hugo, main ]
+    branches: ["main"]   # Déploie quand tu pushes sur main
+  workflow_dispatch:      # Permet de lancer manuellement depuis l'onglet Actions
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          submodules: recursive  # important si tu utilises un thème Hugo en submodule
 
-      - name: Cache Hugo and resources
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/hugo
-            resources/_gen
-          key: ${{ runner.os }}-hugo-${{ hashFiles('**/config.toml') }}-${{ github.ref }}
-          restore-keys: |
-            ${{ runner.os }}-hugo-
-
-      - name: Setup Hugo (extended)
+      - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.149.1'
           extended: true
 
-      - name: Build
-        run: hugo --gc --minify
+      - name: Build site
+        run: hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
 
-      - name: Link check (site)
-        uses: lycheeverse/lychee-action@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          # scan generated public directory
-          paths: ./public
-          format: summary
+          path: ./public
 
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          publish_dir: ./public
-          publish_branch: gh-pages
-          enable_silent: true
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
