--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ disableRSS          = true
 ignoreFiles         = ["static/_stock", ".DS_Store"]
 
 [params]
+  otherURL          = "https://carolinaerni.github.io/hydrotherapie-eaux-vives/"
   description       = "Cabinet d’hydrothérapie et de massages aux Eaux-Vives à Genève"
   author            = "Carolina Erni"
   prodURL           = "https://hydrotherapie-eaux-vives.ch"
